k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vak-system
  labels:
    app.kubernetes.io/name: vak
    app.kubernetes.io/part-of: vak-system
